# kolibri-sync-extras-plugin

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  python-publish.yml  python.yml
kolibri_sync_extras_plugin/: __init__.py  kolibri_plugin.py
kolibri_sync_extras_plugin/management/commands/: sync_proceed_to.py
kolibri_sync_extras_plugin/sync/: operations.py
test/: base.py  test_plugin.py  test_tasks.py
test/management/commands/: test_sync_proceed_to.py
test/sync/: test_context.py  test_operations.py
